# sage

./: .gitignore  docker-compose.yml
services/api_gateway/: Dockerfile  pyproject.toml  requirements.txt
services/api_gateway/src/api_gateway/: main.py
services/auth/: .env.example  Dockerfile  __init__.py  main.py  pyproject.toml  requirements.txt
services/auth/api/endpoints/: auth.py
services/auth/config/: __init__.py  database.py
services/auth/models/: __init__.py  user.py
services/auth/schemas/: token.py  user.py
services/auth/src/auth/: main.py
services/auth/src/auth/api/endpoints/: auth.py
services/auth/src/auth/config/: database.py  settings.py
services/auth/src/auth/models/: base.py
services/auth/src/auth/schemas/: token.py
services/auth/src/auth/utils/: jwt.py
services/auth/utils/: auth.py
